<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="test.com.ido.get.GetInfoActivity">

        <TextView
            android:id="@+id/get_info_result"
            android:background="@color/black"
            android:textColor="@color/white"
            android:minHeight="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="getBasicInfo"
            android:text="@string/get_info_basic_info"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="getFunction"
            android:text="@string/get_info_function"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="getTime"
            android:visibility="gone"
            android:text="@string/get_info_time"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="getMacAddress"
            android:text="@string/get_info_mac"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="getBatteryInfo"
            android:text="@string/get_info_battery"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="getSN"
            android:enabled="false"
            android:visibility="gone"
            android:text="@string/get_info_sn"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="getNoticeSwitchStatus"
            android:enabled="false"
            android:visibility="gone"
            android:text="@string/get_info_notice_switch"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="getLiveData"
            android:text="@string/get_info_live_data"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="getHidInfo"
            android:text="@string/get_info_hid_data"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="getActivityCount"
            android:text="@string/get_info_activity_count"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="getNotDisturbPara"
            android:text="getNotDisturbPara"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="getAlarmV3"
            android:text="getAlarmV3"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="getSupportSportInfoV3"
            android:text="getSupportSportInfoV3"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="getWalkReminder"
            android:text="@string/get_walk_reminder"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="getSportThreeCircleGoal"
            android:text="@string/get_sport_three_circle_goal"/>

    </LinearLayout>

</ScrollView>

